# src/dtos/index.ts
@@ -1,2 +1,4 @@
 export * from './signup.dto';
 export * from './signin.dto';
+export * from './createAgreementDto';
+export * from './deadline.dto';
